--- a/src/App.css
+++ b/src/App.css
@@ -422,6 +422,11 @@ input {
   height: 5em;
   width: 5em;
 }
+.medal-toolbar {
+  background-color: var(--color-black-soft);
+  border-bottom: 2px solid var(--color-secondary);
+  width:48%;
+}
 .trait-header {
   color: var(--color-primary);
   border-bottom: 2px solid var(--color-secondary);
@@ -552,8 +557,16 @@ input {
 .dragging {
   opacity: 0.6;
 }
+.medal-viewbox {
+  height: 250px;
+  transition: height .35s ease-out;
+}
+.expand-box {
+  height: 650px;
+}
 .medal-list {
-  overflow:scroll;
+  overflow-y: auto;
+  margin: 5em 0;
 }
 .medal-name {
   text-align: center;
@@ -769,8 +782,10 @@ h2, h3 {
   .responsive-panel {
     width:80%;
   }
+  .medal-toolbar {
+    width: 90%;
+  }
+  .expand-box {
+    height: 400px;
+  }
 }
-/**svg extracts**/
-#mcoin-sigil { fill:url(#linearGradient10);fill-opacity:0.909804;fill-rule:nonzero;stroke:none;stroke-width:1.53531;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:0.909804 }
-#mcoin-coin { fill:url(#linearGradient15);fill-opacity:0.909804;fill-rule:nonzero;stroke:none;stroke-width:1.06184;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:0.909804 }
-#logo-sigil { fill:url(#linearGradient2);fill-opacity:0.909804;fill-rule:nonzero;stroke:#282828;stroke-width:2.38125;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:0.909804 }
