--- a/src/App.css
+++ b/src/App.css
@@ -152,11 +152,12 @@
     visibility: hidden;
     background-color: var(--color-black-mute);
     top: .5em;
+    z-index:20;
   }
   .showSNav {
     visibility: visible;
     opacity: 1;
-    top: 2em;
+    top: 3em;
     height:auto;
   }
   .expand {
@@ -179,9 +180,13 @@
     color: var(--color-black-soft);
   }
   .pageIndicators {
-    height: 2rem;
-    width: 2rem;
     border-radius: 9999px;
+    border: 4px solid var(--color-tertiary);
+    opacity: 80%;
+  }
+  .active-page {
+    border-color: var(--color-primary);
+    opacity: 70%;
   }
   .overlay-screen {
     background: var(--color-black);
@@ -360,10 +365,31 @@ input {
   left:0 !important;
 }
 /*meddlerThemes*/
+#medal-set-card {
+  background-color: var(--color-black-soft);
+}
+.logo-meddler {
+  width: 400px;
+}
+.logo-mcoin {
+  width:50px;
+}
+.content-header {
+  font-size: 3em;
+  font-weight: 700;
+  padding:  0.5em 0;
+}
+.content-text {
+  padding: .5em;
+  font-size:1.35em;
+  line-height: 2.2em;
+}
 .side-panel {
+  width:100%;
   padding: 1em;
   border: 2px solid var(--color-grey);
   border-radius: .5em;
+  background-color: var(--color-black-soft);
 }
 .category-divide {
   border-bottom: .3em solid var(--color-primary);
@@ -398,7 +424,7 @@ input {
   height:75%;
   transform: translateX(6em);
   overflow-y: auto;
-  width: 24em;
+  width: 20em;
   opacity: 0;
   transition: transform .35s ease-out, opacity .4s ease-out;
 }
@@ -425,7 +451,7 @@ input {
 .medal-toolbar {
   background-color: var(--color-black-soft);
   border-bottom: 2px solid var(--color-secondary);
-  width:48%;
+  width:48%
 }
 .trait-header {
   color: var(--color-primary);
@@ -748,11 +774,11 @@ input {
 }
 
 li.active > a {
-  color: var(--color-secondary);
+  color: var(--color-primary);
 }
 
 li > a:hover {
-  color:var(--color-secondary);
+  color:var(--color-primary);
 }
 
 /*  Gives a little bit of buffer when header is navigated to */
