multiple style changes: usage, disclaimer home

--- a/src/App.css
+++ b/src/App.css
@@ -240,6 +240,12 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.heading-item {
+  padding: .2em;
+}
+.heading-item-child {
+  padding: .2em .5em;
+}
 input {
   background-color: #242424;
 }
