--- a/src/App.css
+++ b/src/App.css
@@ -370,7 +370,15 @@ input {
   opacity: 1 !important;
   left:0 !important;
 }
-/*meddlerThemes*/
+/*meddlrThemes*/
+.notfound-header  {
+  font-size: 4em;
+  font-weight: 700;
+}
+.notfound-text {
+  font-size: 1.5em;
+  text-align: center;
+}
 #medal-set-card {
   background-color: var(--color-black-soft);
 }
