--- a/src/App.css
+++ b/src/App.css
@@ -382,6 +382,10 @@ input {
 #medal-set-card {
   background-color: var(--color-black-soft);
 }
+.bookIcon {
+  z-index: 20;
+  fill: var(--color-secondary);
+}
 .logo-meddler {
   width: 400px;
 }
